--- a/index.html
+++ b/index.html
@@ -181,31 +181,36 @@
       </div>
     </section>
 
-    <!-- CONTACT -->
-    <section id="contact" class="section container">
-      <h2 class="section-title">Get In Touch</h2>
-      <p class="contact-text">
-        Have an idea around embedded systems or healthcare electronics project? I’d love to talk.
-      </p>
-      <div class="contact-actions">
-        <a href="mailto:navyadeenarojin@gmail.com" class="btn-primary">
-          Email me
-        </a>
-        <a href="https://github.com/navyarojin" target="_blank" rel="noreferrer">
-          GitHub
-        </a>
-        <a href="https://www.linkedin.com" target="_blank" rel="noreferrer">
-          LinkedIn
-        </a>
-      </div>
-    </section>
+<section id="contact" class="section container">
+  <h2 class="section-title">Get In Touch</h2>
+
+  <div class="contact-card">
+    <p>
+      Have an idea around embedded systems or healthcare electronics project? I’d love to talk.
+    </p>
+
+    <div class="contact-actions">
+      <a href="mailto:navyadeenarojin@gmail.com" class="btn-primary">
+        Email Me
+      </a>
+      <a href="https://github.com/navyarojin" target="_blank" rel="noreferrer" class="btn-link">
+        GitHub
+      </a>
+      <a href="https://www.linkedin.com" target="_blank" rel="noreferrer" class="btn-link">
+        LinkedIn
+      </a>
+    </div>
+  </div>
+</section>
+
 
   </main>
 
   <footer class="footer">
-    <p>© <span id="year"></span> Navya Deena Rojin • Embedded Engineer.</p>
+    <p>© <span id="year"></span> Navya Deena Rojin • Embedded Systems Engineering.</p>
   </footer>
 
 </body>
 </html>
+
 
