--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- HERO -->
     <section class="hero-section container">
       <div class="hero-text-block">
-        <p class="hero-tag">Embedded Systems • MERN Stack</p>
+        <p class="hero-tag">Embedded Systems</p>
         <h1>Hi, I'm Navya Deena Rojin</h1>
         <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
         <p class="hero-desc">
@@ -212,5 +212,6 @@
 
 </body>
 </html>
+
 
 
