--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
           <div class="timeline-dot"></div>
           <div class="timeline-content">
             <h3>B.Tech in Electronics & Communication Engineering</h3>
-            <p class="timeline-meta">Undergraduate • India</p>
+            <p class="timeline-meta">Undergraduate • TKM College of Engineering, Karicode</p>
             <p>
               Focusing on embedded systems, communication, and hardware design
               with projects in healthcare and IoT devices.
@@ -212,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
