--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         <h1>Hi, I'm Navya Deena Rojin</h1>
         <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
         <p class="hero-desc">
-          I design and build electronics from custom
-          ESP32 boards and sensor systems.
+          I design and build electronics from custom ESP32 boards and sensor systems.
         </p>
 
         <div class="hero-actions">
@@ -47,7 +46,7 @@
       <div class="hero-pill-grid">
         <div class="pill-card">
           <h3>Embedded Hardware</h3>
-          <p>Custom PCBs, ESP32, IMUs, RTCs, power and 3D-printed enclosures.</p>
+          <p>Custom PCBs and 3D-printed enclosures.</p>
         </div>
         <div class="pill-card">
           <h3>&lt; Firmware /&gt;</h3>
@@ -61,10 +60,8 @@
       <h2 class="section-title">About Me</h2>
       <div class="about-layout">
         <p>
-          I’m an Electronics & Communication Engineering undergraduate focused on
-          embedded systems, PCB design, and healthcare electronics. I enjoy taking
-          ideas from a rough sketch to working prototypes – schematics, layout,
-          firmware, and mechanical design.
+          I’m an Electronics & Communication Engineering undergraduate focused on embedded systems, PCB design, and healthcare electronics. I enjoy taking
+          ideas from a rough sketch to working prototypes – schematics, layout, firmware, and mechanical design.
         </p>
       </div>
     </section>
@@ -76,7 +73,7 @@
         <div class="info-card">
           <h3>Embedded Systems</h3>
           <p>
-            Designing microcontroller-based systems, working with ESP32, sensors,
+            Designing microcontroller-based systems, working with microcontrollers and microprocessors, sensors,
             communication interfaces, and real-time data acquisition.
           </p>
         </div>
@@ -100,9 +97,9 @@
           <ul>
             <li>ESP32 / Arduino / microcontrollers</li>
             <li>Schematic design & PCB layout (EasyEDA, KiCAD, Cadence)</li>
-            <li>Sensors, IMUs (MPU6050), RTC (DS3231)</li>
+            <li>Sensors & Actuators</li>
             <li>Battery charging & power management</li>
-            <li>3D enclosure design (Fusion 360)</li>
+            <li>3D enclosure design (Autodesk Fusion)</li>
           </ul>
         </div>
 
@@ -212,6 +209,7 @@
 
 </body>
 </html>
+
 
 
 
