--- a/index.html
+++ b/index.html
@@ -55,16 +55,19 @@
       </div>
     </section>
 
-    <!-- ABOUT -->
-    <section id="about" class="section container">
-      <h2 class="section-title">About Me</h2>
-      <div class="about-layout">
-        <p>
-          I’m an Electronics & Communication Engineering undergraduate focused on embedded systems, PCB design, and healthcare electronics. I enjoy taking
-          ideas from a rough sketch to working prototypes – schematics, layout, firmware, and mechanical design.
-        </p>
-      </div>
-    </section>
+<section id="about" class="section container">
+  <h2 class="section-title">About Me</h2>
+
+  <div class="about-card">
+    <p>
+      I’m an Electronics & Communication Engineering undergraduate focused on
+      embedded systems, PCB design, and healthcare electronics. I enjoy taking
+      ideas from a rough sketch to working prototypes — schematics, layout,
+      firmware, and mechanical design.
+    </p>
+  </div>
+</section>
+
 
     <!-- WHAT I DO -->
     <section class="section container">
@@ -209,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
