--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
       <a href="https://github.com/navyarojin" target="_blank" rel="noreferrer" class="btn-link">
         GitHub
       </a>
-      <a href="https://www.linkedin.com" target="_blank" rel="noreferrer" class="btn-link">
+      <a href="https://www.linkedin.com/in/navya-deena-rojin/" target="_blank" rel="noreferrer" class="btn-link">
         LinkedIn
       </a>
     </div>
@@ -212,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
