--- a/projects/TremoSense/tremosense.html
+++ b/projects/TremoSense/tremosense.html
@@ -53,15 +53,16 @@
         <li>Support for data logging / external analysis</li>
       </ul>
     </section>
-
     <section class="project-section">
-      <h2>Schematic</h2>
-      <iframe
-        class="viewer"
-        src="../../assets/tremosense/TremoSense-Schematic.pdf"
-        title="TremoSense Schematic">
-      </iframe>
+      <h2>PCB Schematic</h2>
+      <a href="../../assets/tremosense/pcb-schematic.png" target="_blank">
+        <img
+          class="image-view"
+          src="../../assets/tremosense/pcb-schematic.png"
+          alt="TremoSense PCB Schematic">
+      </a>
     </section>
+  
 
     <section class="project-section">
       <h2>PCB layout</h2>
