--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Hi, I'm Navya Deena Rojin</h1>
         <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
         <p class="hero-desc">
-          I design and build electronics from custom ESP32 boards and sensor systems.
+          I design and build electronic systems, from custom ESP32 development boards to sensor-based embedded solutions.
         </p>
 
         <div class="hero-actions">
@@ -212,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
