--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Navya Deena Rojin - Embedded Systems Engineering</title>
+  <title>Navya Deena Rojin – Embedded Systems Engineering</title>
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
@@ -54,7 +54,7 @@
         <p>
           I'm an Electronics & Communication Engineering undergraduate focused on
           embedded systems, PCB design, and healthcare electronics. I enjoy taking
-          ideas from a rough sketch to working prototypes - schematics, layout,
+          ideas from a rough sketch to working prototypes — schematics, layout,
           firmware, and mechanical design.
         </p>
       </div>
@@ -74,7 +74,7 @@
           <h3>PCB Design</h3>
           <p>
             Creating schematics and PCB layouts (EasyEDA, KiCAD and Cadence), with attention to power,
-            routing, and manufacturability - including custom development boards.
+            routing, and manufacturability – including custom dev boards.
           </p>
         </div>
       </div>
@@ -89,7 +89,7 @@
             <li>ESP32 / Arduino / microcontrollers</li>
             <li>Schematic design & PCB layout (EasyEDA, KiCAD, Cadence)</li>
             <li>Sensors & Actuators</li>
-            <li>Simulation Tools (Vivado, LTSpice)</li>
+            <li>Battery charging & power management</li>
             <li>3D enclosure design (Autodesk Fusion)</li>
           </ul>
         </div>
@@ -187,4 +187,3 @@
   </footer>
 </body>
 </html>
-
