--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Navya Deena Rojin – Embedded Systems Engineering</title>
+
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
 </head>
 <body>
+
+  <!-- NAVBAR -->
   <header class="site-header">
     <div class="nav-inner container">
       <div class="logo">Navya<span>.</span></div>
@@ -23,19 +26,23 @@
   </header>
 
   <main id="home">
+
+    <!-- HERO -->
     <section class="hero-section container">
       <div class="hero-text-block">
         <p class="hero-tag">Embedded Systems</p>
         <h1>Hi, I'm Navya Deena Rojin</h1>
         <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
         <p class="hero-desc">
-          I design and build electronic systems, from custom ESP32 development boards to sensor-based embedded solutions.
+          I design and build electronics from custom ESP32 boards and sensor systems.
         </p>
+
         <div class="hero-actions">
           <a href="#projects" class="btn-primary">View my projects</a>
-          <a href="#contact" class="btn-outline">Let's collaborate</a>
+          <a href="#contact" class="btn-outline">Let’s collaborate</a>
         </div>
       </div>
+
       <div class="hero-pill-grid">
         <div class="pill-card">
           <h3>Embedded Hardware</h3>
@@ -48,18 +55,21 @@
       </div>
     </section>
 
-    <section id="about" class="section container">
-      <h2 class="section-title">About Me</h2>
-      <div class="about-card">
-        <p>
-          I'm an Electronics & Communication Engineering undergraduate focused on
-          embedded systems, PCB design, and healthcare electronics. I enjoy taking
-          ideas from a rough sketch to working prototypes — schematics, layout,
-          firmware, and mechanical design.
-        </p>
-      </div>
-    </section>
+<section id="about" class="section container">
+  <h2 class="section-title">About Me</h2>
 
+  <div class="about-card">
+    <p>
+      I’m an Electronics & Communication Engineering undergraduate focused on
+      embedded systems, PCB design, and healthcare electronics. I enjoy taking
+      ideas from a rough sketch to working prototypes — schematics, layout,
+      firmware, and mechanical design.
+    </p>
+  </div>
+</section>
+
+
+    <!-- WHAT I DO -->
     <section class="section container">
       <h2 class="section-title">What I Do</h2>
       <div class="cards-3">
@@ -80,8 +90,10 @@
       </div>
     </section>
 
+    <!-- SKILLS -->
     <section id="skills" class="section container">
       <h2 class="section-title">Skills</h2>
+
       <div class="skills-grid">
         <div class="skills-group">
           <h3>Embedded & Hardware</h3>
@@ -93,6 +105,7 @@
             <li>3D enclosure design (Autodesk Fusion)</li>
           </ul>
         </div>
+
         <div class="skills-group">
           <h3>General</h3>
           <ul>
@@ -105,8 +118,10 @@
       </div>
     </section>
 
+    <!-- EDUCATION -->
     <section id="education" class="section container">
       <h2 class="section-title">Education</h2>
+
       <div class="timeline">
         <div class="timeline-item">
           <div class="timeline-dot"></div>
@@ -122,9 +137,12 @@
       </div>
     </section>
 
+    <!-- PROJECTS -->
     <section id="projects" class="section container">
       <h2 class="section-title">Projects</h2>
+
       <div class="projects-grid">
+
         <article class="project-card">
           <h3>Custom ESP32-S3 Development Board</h3>
           <p class="project-meta">Embedded • PCB • IoT</p>
@@ -142,12 +160,13 @@
             View project →
           </a>
         </article>
+
         <article class="project-card">
           <h3>TremoSense</h3>
           <p class="project-meta">Healthcare • Wearable</p>
           <p class="project-desc">
             Wrist-worn system that measures tremor frequency and amplitude to
-            help analyse Parkinson's medication efficacy through motion data.
+            help analyse Parkinson’s medication efficacy through motion data.
           </p>
           <ul class="project-list">
             <li>High-sensitivity IMU-based tremor measurement</li>
@@ -158,32 +177,44 @@
             View project →
           </a>
         </article>
+
       </div>
     </section>
 
-    <section id="contact" class="section container">
-      <h2 class="section-title">Get In Touch</h2>
-      <div class="contact-card">
-        <p>
-          Have an idea around embedded systems or healthcare electronics project? I'd love to talk.
-        </p>
-        <div class="contact-actions">
-          <a href="mailto:navyadeenarojin@gmail.com" class="btn-primary">
-            Email Me
-          </a>
-          <a href="https://github.com/navyarojin" target="_blank" rel="noreferrer" class="btn-link">
-            GitHub
-          </a>
-          <a href="https://www.linkedin.com/in/navya-deena-rojin/" target="_blank" rel="noreferrer" class="btn-link">
-            LinkedIn
-          </a>
-        </div>
-      </div>
-    </section>
+<section id="contact" class="section container">
+  <h2 class="section-title">Get In Touch</h2>
+
+  <div class="contact-card">
+    <p>
+      Have an idea around embedded systems or healthcare electronics project? I’d love to talk.
+    </p>
+
+    <div class="contact-actions">
+      <a href="mailto:navyadeenarojin@gmail.com" class="btn-primary">
+        Email Me
+      </a>
+      <a href="https://github.com/navyarojin" target="_blank" rel="noreferrer" class="btn-link">
+        GitHub
+      </a>
+      <a href="https://www.linkedin.com/in/navya-deena-rojin/" target="_blank" rel="noreferrer" class="btn-link">
+        LinkedIn
+      </a>
+    </div>
+  </div>
+</section>
+
+
   </main>
 
   <footer class="footer">
     <p>© <span id="year"></span> Navya Deena Rojin • Embedded Systems Engineering.</p>
   </footer>
+
 </body>
 </html>
+
+
+
+
+
+
