--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Navya Deena Rojin – Embedded Systems Engineering</title>
+  <title>Navya Deena Rojin - Embedded Systems Engineering</title>
 
   <link rel="stylesheet" href="style.css" />
   <script defer src="script.js"></script>
@@ -62,7 +62,7 @@
     <p>
       I’m an Electronics & Communication Engineering undergraduate focused on
       embedded systems, PCB design, and healthcare electronics. I enjoy taking
-      ideas from a rough sketch to working prototypes — schematics, layout,
+      ideas from a rough sketch to working prototypes - schematics, layout,
       firmware, and mechanical design.
     </p>
   </div>
@@ -84,7 +84,7 @@
           <h3>PCB Design</h3>
           <p>
             Creating schematics and PCB layouts (EasyEDA, KiCAD and Cadence), with attention to power,
-            routing, and manufacturability – including custom dev boards.
+            routing, and manufacturability - including custom dev boards.
           </p>
         </div>
       </div>
@@ -98,7 +98,7 @@
         <div class="skills-group">
           <h3>Embedded & Hardware</h3>
           <ul>
-            <li>ESP32 / Arduino / microcontrollers</li>
+            <li>ESP32/ Arduino/ STM32 microcontrollers</li>
             <li>Schematic design & PCB layout (EasyEDA, KiCAD, Cadence)</li>
             <li>Sensors & Actuators</li>
             <li>Battery charging & power management</li>
@@ -212,6 +212,7 @@
 
 </body>
 </html>
+
 
 
 
