--- a/index.html
+++ b/index.html
@@ -89,22 +89,71 @@
         </div>
       </div>
     </section>
+    
+    <!--SKILLS-->
+<section>
+  <h2><i class="fa-solid fa-microchip"></i> Technical Skills</h2>
 
-    <!-- SKILLS -->
-    <section id="skills" class="section container">
-      <h2 class="section-title">Skills</h2>
+  <div class="skills-group">
 
-      <div class="skills-grid">
-        <div class="skills-group">
-          <h3>Embedded & Hardware</h3>
-          <ul>
-            <li>ESP32/ Arduino/ STM32 microcontrollers</li>
-            <li>Schematic design & PCB layout (EasyEDA, KiCAD, Cadence)</li>
-            <li>Sensors & Actuators</li>
-            <li>Battery charging & power management</li>
-            <li>3D enclosure design (Autodesk Fusion)</li>
-          </ul>
-        </div>
+    <div class="skill-category">
+      <h3><i class="fa-solid fa-code"></i> Programming</h3>
+      <ul>
+        <li>C/C++</li>
+        <li>Embedded C</li>
+        <li>Python </li>
+        <li>Verilog</li>
+      </ul>
+    </div>
+
+    <div class="skill-category">
+      <h3><i class="fa-solid fa-microchip"></i> Microcontrollers</h3>
+      <ul>
+        <li>ESP32</li>
+        <li>STM32</li>
+        <li>Arduino</li>
+      </ul>
+    </div>
+
+    <div class="skill-category">
+      <h3><i class="fa-solid fa-wave-square"></i> Embedded Systems</h3>
+      <ul>
+        <li>Sensor Interfacing</li>
+        <li>Communication Protocols</li>
+        <li>Hardware Debugging</li>
+      </ul>
+    </div>
+
+    <div class="skill-category">
+      <h3><i class="fa-solid fa-layer-group"></i> PCB Design</h3>
+      <ul>
+        <li>EasyEDA</li>
+        <li>KiCad</li>
+        <li>Cadence (Beginner)</li>
+      </ul>
+    </div>
+
+    <div class="skill-category">
+      <h3><i class="fa-solid fa-cube"></i> 3D Design & Prototyping</h3>
+      <ul>
+        <li>Autodesk Fusion</li>
+        <li>3D Printing Optimization</li>
+        <li>Enclosure Design</li>
+      </ul>
+    </div>
+
+    <div class="skill-category">
+      <h3><i class="fa-solid fa-chart-line"></i> Tools & Simulation</h3>
+      <ul>
+        <li>Vivado</li>
+        <li>Xcelium</li>
+        <li>LTSpice</li>
+      </ul>
+    </div>
+
+  </div>
+</section>
+
 
         <div class="skills-group">
           <h3>General</h3>
@@ -127,7 +176,7 @@
           <div class="timeline-dot"></div>
           <div class="timeline-content">
             <h3>B.Tech in Electronics & Communication Engineering</h3>
-            <p class="timeline-meta">Undergraduate • TKM College of Engineering, Karicode</p>
+            <p class="timeline-meta">Undergraduate • TKM College of Engineering, Karicode         2023-2027</p>
             <p>
               Focusing on embedded systems, communication, and hardware design
               with projects in healthcare and IoT devices.
@@ -212,6 +261,7 @@
 
 </body>
 </html>
+
 
 
 
