--- a/index.html
+++ b/index.html
@@ -91,13 +91,14 @@
     </section>
     
     <!--SKILLS-->
-<section>
-  <h2><i class="fa-solid fa-microchip"></i> Technical Skills</h2>
+<section id="skills" class="section container">
+  <h2 class="section-title">Technical Skills</h2>
 
-  <div class="skills-group">
+  <div class="skill-card-grid">
 
-    <div class="skill-category">
-      <h3><i class="fa-solid fa-code"></i> Programming</h3>
+    <div class="skill-card">
+      <i class="fa-solid fa-code"></i>
+      <h3>Programming</h3>
       <ul>
         <li>C/C++</li>
         <li>Embedded C</li>
@@ -106,26 +107,29 @@
       </ul>
     </div>
 
-    <div class="skill-category">
-      <h3><i class="fa-solid fa-microchip"></i> Microcontrollers</h3>
+    <div class="skill-card">
+      <i class="fa-solid fa-microchip"></i>
+      <h3>Microcontrollers</h3>
       <ul>
-        <li>ESP32</li>
+        <li>ESP32 </li>
         <li>STM32</li>
         <li>Arduino</li>
       </ul>
     </div>
 
-    <div class="skill-category">
-      <h3><i class="fa-solid fa-wave-square"></i> Embedded Systems</h3>
+    <div class="skill-card">
+      <i class="fa-solid fa-wave-square"></i>
+      <h3>Embedded Systems</h3>
       <ul>
         <li>Sensor Interfacing</li>
         <li>Communication Protocols</li>
-        <li>Hardware Debugging</li>
+        <li>Debugging </li>
       </ul>
     </div>
 
-    <div class="skill-category">
-      <h3><i class="fa-solid fa-layer-group"></i> PCB Design</h3>
+    <div class="skill-card">
+      <i class="fa-solid fa-layer-group"></i>
+      <h3>PCB Design</h3>
       <ul>
         <li>EasyEDA</li>
         <li>KiCad</li>
@@ -133,17 +137,19 @@
       </ul>
     </div>
 
-    <div class="skill-category">
-      <h3><i class="fa-solid fa-cube"></i> 3D Design & Prototyping</h3>
+    <div class="skill-card">
+      <i class="fa-solid fa-cube"></i>
+      <h3>3D Design & Prototyping</h3>
       <ul>
-        <li>Autodesk Fusion</li>
+        <li>Autodesk Fusion 360</li>
         <li>3D Printing Optimization</li>
         <li>Enclosure Design</li>
       </ul>
     </div>
 
-    <div class="skill-category">
-      <h3><i class="fa-solid fa-chart-line"></i> Tools & Simulation</h3>
+    <div class="skill-card">
+      <i class="fa-solid fa-chart-line"></i>
+      <h3>Tools & Simulation</h3>
       <ul>
         <li>Vivado</li>
         <li>Xcelium</li>
@@ -154,18 +160,6 @@
   </div>
 </section>
 
-
-        <div class="skills-group">
-          <h3>General</h3>
-          <ul>
-            <li>Embedded C programming</li>
-            <li>Version control (Git & GitHub)</li>
-            <li>Problem solving & debugging</li>
-            <li>Documentation & schematics annotation</li>
-          </ul>
-        </div>
-      </div>
-    </section>
 
     <!-- EDUCATION -->
     <section id="education" class="section container">
@@ -261,6 +255,7 @@
 
 </body>
 </html>
+
 
 
 
