--- a/index.html
+++ b/index.html
@@ -96,65 +96,116 @@
 
   <div class="skill-card-grid">
 
+    <!-- Programming -->
     <div class="skill-card">
-      <i class="fa-solid fa-code"></i>
+      <div class="skill-icon"><i class="fa-solid fa-code"></i></div>
       <h3>Programming</h3>
-      <ul>
-        <li>C/C++</li>
-        <li>Embedded C</li>
-        <li>Python </li>
-        <li>Verilog</li>
-      </ul>
+      <div class="skill-item">
+        <span>C / C++</span>
+        <div class="bar"><span style="width: 85%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>Embedded C</span>
+        <div class="bar"><span style="width: 90%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>Python</span>
+        <div class="bar"><span style="width: 60%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>Verilog</span>
+        <div class="bar"><span style="width: 50%"></span></div>
+      </div>
     </div>
 
+    <!-- Microcontrollers -->
     <div class="skill-card">
-      <i class="fa-solid fa-microchip"></i>
+      <div class="skill-icon"><i class="fa-solid fa-microchip"></i></div>
       <h3>Microcontrollers</h3>
-      <ul>
-        <li>ESP32 </li>
-        <li>STM32</li>
-        <li>Arduino</li>
-      </ul>
+      <div class="skill-item">
+        <span>ESP32 / ESP32-S3</span>
+        <div class="bar"><span style="width: 85%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>STM32</span>
+        <div class="bar"><span style="width: 70%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>Arduino</span>
+        <div class="bar"><span style="width: 90%"></span></div>
+      </div>
     </div>
 
+    <!-- Embedded Systems -->
     <div class="skill-card">
-      <i class="fa-solid fa-wave-square"></i>
+      <div class="skill-icon"><i class="fa-solid fa-wave-square"></i></div>
       <h3>Embedded Systems</h3>
-      <ul>
-        <li>Sensor Interfacing</li>
-        <li>Communication Protocols</li>
-        <li>Debugging </li>
-      </ul>
+      <div class="skill-item">
+        <span>Sensor Interfacing</span>
+        <div class="bar"><span style="width: 90%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>Communication Protocols</span>
+        <div class="bar"><span style="width: 80%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>Debugging</span>
+        <div class="bar"><span style="width: 75%"></span></div>
+      </div>
     </div>
 
+    <!-- PCB Design -->
     <div class="skill-card">
-      <i class="fa-solid fa-layer-group"></i>
+      <div class="skill-icon"><i class="fa-solid fa-layer-group"></i></div>
       <h3>PCB Design</h3>
-      <ul>
-        <li>EasyEDA</li>
-        <li>KiCad</li>
-        <li>Cadence (Beginner)</li>
-      </ul>
+      <div class="skill-item">
+        <span>EasyEDA</span>
+        <div class="bar"><span style="width: 90%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>KiCad</span>
+        <div class="bar"><span style="width: 70%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>Cadence</span>
+        <div class="bar"><span style="width: 50%"></span></div>
+      </div>
     </div>
 
+    <!-- 3D Design -->
     <div class="skill-card">
-      <i class="fa-solid fa-cube"></i>
+      <div class="skill-icon"><i class="fa-solid fa-cube"></i></div>
       <h3>3D Design & Prototyping</h3>
-      <ul>
-        <li>Autodesk Fusion 360</li>
-        <li>3D Printing Optimization</li>
-        <li>Enclosure Design</li>
-      </ul>
+      <div class="skill-item">
+        <span>Fusion 360</span>
+        <div class="bar"><span style="width: 80%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>3D Printing Optimization</span>
+        <div class="bar"><span style="width: 75%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>Enclosure Design</span>
+        <div class="bar"><span style="width: 85%"></span></div>
+      </div>
     </div>
 
+    <!-- Tools -->
     <div class="skill-card">
-      <i class="fa-solid fa-chart-line"></i>
+      <div class="skill-icon"><i class="fa-solid fa-chart-line"></i></div>
       <h3>Tools & Simulation</h3>
-      <ul>
-        <li>Vivado</li>
-        <li>Xcelium</li>
-        <li>LTSpice</li>
-      </ul>
+      <div class="skill-item">
+        <span>Vivado</span>
+        <div class="bar"><span style="width: 75%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>Xcelium</span>
+        <div class="bar"><span style="width: 65%"></span></div>
+      </div>
+      <div class="skill-item">
+        <span>LTSpice</span>
+        <div class="bar"><span style="width: 80%"></span></div>
+      </div>
     </div>
 
   </div>
@@ -255,6 +306,7 @@
 
 </body>
 </html>
+
 
 
 
