--- a/index.html
+++ b/index.html
@@ -102,15 +102,15 @@
       <h3>Programming</h3>
       <div class="skill-item">
         <span>C / C++</span>
-        <div class="bar"><span style="width: 85%"></span></div>
+        <div class="bar"><span style="width: 65%"></span></div>
       </div>
       <div class="skill-item">
         <span>Embedded C</span>
-        <div class="bar"><span style="width: 90%"></span></div>
+        <div class="bar"><span style="width: 70%"></span></div>
       </div>
       <div class="skill-item">
         <span>Python</span>
-        <div class="bar"><span style="width: 60%"></span></div>
+        <div class="bar"><span style="width: 85%"></span></div>
       </div>
       <div class="skill-item">
         <span>Verilog</span>
@@ -123,16 +123,16 @@
       <div class="skill-icon"><i class="fa-solid fa-microchip"></i></div>
       <h3>Microcontrollers</h3>
       <div class="skill-item">
-        <span>ESP32 / ESP32-S3</span>
+        <span>ESP32</span>
         <div class="bar"><span style="width: 85%"></span></div>
       </div>
       <div class="skill-item">
         <span>STM32</span>
-        <div class="bar"><span style="width: 70%"></span></div>
+        <div class="bar"><span style="width: 50%"></span></div>
       </div>
       <div class="skill-item">
         <span>Arduino</span>
-        <div class="bar"><span style="width: 90%"></span></div>
+        <div class="bar"><span style="width: 95%"></span></div>
       </div>
     </div>
 
@@ -160,7 +160,7 @@
       <h3>PCB Design</h3>
       <div class="skill-item">
         <span>EasyEDA</span>
-        <div class="bar"><span style="width: 90%"></span></div>
+        <div class="bar"><span style="width: 95%"></span></div>
       </div>
       <div class="skill-item">
         <span>KiCad</span>
@@ -168,7 +168,7 @@
       </div>
       <div class="skill-item">
         <span>Cadence</span>
-        <div class="bar"><span style="width: 50%"></span></div>
+        <div class="bar"><span style="width: 40%"></span></div>
       </div>
     </div>
 
@@ -177,8 +177,8 @@
       <div class="skill-icon"><i class="fa-solid fa-cube"></i></div>
       <h3>3D Design & Prototyping</h3>
       <div class="skill-item">
-        <span>Fusion 360</span>
-        <div class="bar"><span style="width: 80%"></span></div>
+        <span>Autodesk Fusion</span>
+        <div class="bar"><span style="width: 90%"></span></div>
       </div>
       <div class="skill-item">
         <span>3D Printing Optimization</span>
@@ -200,11 +200,11 @@
       </div>
       <div class="skill-item">
         <span>Xcelium</span>
-        <div class="bar"><span style="width: 65%"></span></div>
+        <div class="bar"><span style="width: 30%"></span></div>
       </div>
       <div class="skill-item">
         <span>LTSpice</span>
-        <div class="bar"><span style="width: 80%"></span></div>
+        <div class="bar"><span style="width: 90%"></span></div>
       </div>
     </div>
 
@@ -221,7 +221,7 @@
           <div class="timeline-dot"></div>
           <div class="timeline-content">
             <h3>B.Tech in Electronics & Communication Engineering</h3>
-            <p class="timeline-meta">Undergraduate • TKM College of Engineering, Karicode         2023-2027</p>
+            <p class="timeline-meta">Undergraduate • TKM College of Engineering, Karicode</p>
             <p>
               Focusing on embedded systems, communication, and hardware design
               with projects in healthcare and IoT devices.
@@ -306,6 +306,7 @@
 
 </body>
 </html>
+
 
 
 
