--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>Hi, I'm Navya Deena Rojin</h1>
         <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
         <p class="hero-desc">
-          I design and build electronics from custom ESP32 boards and sensor systems.
+         I design and build electronics, from custom development boards to integrated sensor systems.
         </p>
 
         <div class="hero-actions">
@@ -306,6 +306,7 @@
 
 </body>
 </html>
+
 
 
 
