--- a/index.html
+++ b/index.html
@@ -231,49 +231,55 @@
       </div>
     </section>
 
-    <!-- PROJECTS -->
-    <section id="projects" class="section container">
-      <h2 class="section-title">Projects</h2>
+  <section id="projects" class="section container">
+    
+  <h2 class="section-title">Projects</h2>
 
-      <div class="projects-grid">
+  <div class="projects-grid">
 
-        <article class="project-card">
-          <h3>Custom ESP32-S3 Development Board</h3>
-          <p class="project-meta">Embedded • PCB • IoT</p>
-          <p class="project-desc">
-            Custom ESP32-S3 dev board with USB-C, Li-ion charging, IMU, RTC,
-            and micro-SD card – designed for prototyping healthcare and
-            data-logging systems.
-          </p>
-          <ul class="project-list">
-            <li>LTC4054-based battery charging & 3.3&nbsp;V regulation</li>
-            <li>Integrated MPU6050 IMU and DS3231 RTC</li>
-            <li>Micro-SD storage and accessible expansion headers</li>
-          </ul>
-          <a href="projects/ESP32_DEVBoard/custom-esp32-devboard.html" class="project-link">
-            View project →
-          </a>
-        </article>
+    <!-- PROJECT 1 -->
+    <article class="project-card">
 
-        <article class="project-card">
-          <h3>TremoSense</h3>
-          <p class="project-meta">Healthcare • Wearable</p>
-          <p class="project-desc">
-            Wrist-worn system that measures tremor frequency and amplitude to
-            help analyse Parkinson’s medication efficacy through motion data.
-          </p>
-          <ul class="project-list">
-            <li>High-sensitivity IMU-based tremor measurement</li>
-            <li>Feature extraction for tremor frequency & amplitude</li>
-            <li>Wearable-oriented PCB & embedded design</li>
-          </ul>
-          <a href="projects/TremoSense/tremosense.html" class="project-link">
-            View project →
-          </a>
-        </article>
+      <img src="assets/esp32-devboard/board-3d.png" alt="ESP32 Project" class="project-thumb">
 
+      <div class="project-content">
+        <h3>Custom ESP32-S3 Dev Board</h3>
+        <p class="project-meta">Embedded • PCB • IoT</p>
+
+        <p class="project-short">
+          Custom ESP32-S3 board with USB-C, battery charging, SD card, and IMU — built for rapid prototyping.
+        </p>
+
+        <a href="projects/ESP32_DEVBoard/custom-esp32-devboard.html" class="project-link">
+          View project →
+        </a>
       </div>
-    </section>
+
+    </article>
+
+    <!-- PROJECT 2 -->
+    <article class="project-card">
+
+      <img src="assets/tremosense/board-3d.png" alt="TremoSense" class="project-thumb">
+
+      <div class="project-content">
+        <h3>TremoSense</h3>
+        <p class="project-meta">Healthcare • Wearable</p>
+
+        <p class="project-short">
+          Wearable tremor-tracking system using IMU data to analyze Parkinson’s medication response.
+        </p>
+
+        <a href="projects/TremoSense/tremosense.html" class="project-link">
+          View project →
+        </a>
+      </div>
+
+    </article>
+
+  </div>
+</section>
+
 
 <section id="contact" class="section container">
   <h2 class="section-title">Get In Touch</h2>
@@ -306,6 +312,7 @@
 
 </body>
 </html>
+
 
 
 
