--- a/index.html
+++ b/index.html
@@ -28,20 +28,22 @@
   <main id="home">
 
     <!-- HERO -->
-    <section class="hero-section container">
-      <div class="hero-text-block">
-        <p class="hero-tag">Embedded Systems</p>
-        <h1>Hi, I'm Navya Deena Rojin</h1>
-        <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
-        <p class="hero-desc">
-         I design and build electronics, from custom development boards to integrated sensor systems.
-        </p>
+  <section class="hero-section container">
+  <div class="hero-text-block">
+    <p class="hero-tag">Embedded Systems</p>
+    <h1>Hi, I'm Navya Deena Rojin</h1>
+    <h2 class="hero-subtitle">Aspiring Embedded System Engineer</h2>
+    <p class="hero-desc">
+      I design and build electronics from custom ESP32 boards and sensor systems.
+    </p>
 
-        <div class="hero-actions">
-          <a href="#projects" class="btn-primary">View my projects</a>
-          <a href="#contact" class="btn-outline">Let’s collaborate</a>
-        </div>
-      </div>
+    <div class="hero-actions">
+      <a href="#projects" class="btn-primary">View my projects</a>
+      <a href="#contact" class="btn-outline">Let’s collaborate</a>
+    </div>
+  </div>
+</section>
+
 
 <section id="about" class="section container">
   <h2 class="section-title">About Me</h2>
@@ -300,6 +302,7 @@
 
 </body>
 </html>
+
 
 
 
