--- a/index.html
+++ b/index.html
@@ -270,6 +270,27 @@
   </div>
 </section>
 
+<!-- PROJECT 3 -->
+<article class="project-card">
+
+  <img src="assets/Scrub_Dispenser/scrub-thumb.jpg" alt="Non-contact scrub dispenser" class="project-thumb">
+
+  <div class="project-content">
+    <h3>Non-Contact Scrub Dispensing System</h3>
+    <p class="project-meta">Healthcare • IR Sensing • Internship</p>
+
+    <p class="project-short">
+      IR-based automatic scrub dispenser using a peristaltic pump to eliminate contamination and bottle clogging - built during my 2nd-year summer internship at BCMCH under IEEE EMBS.
+    </p>
+
+    <a href="projects/Scrub_Dispenser/scrub-dispenser.html" class="project-link">
+      View project →
+    </a>
+  </div>
+
+</article>
+
+
 
 <section id="contact" class="section container">
   <h2 class="section-title">Get In Touch</h2>
@@ -302,6 +323,7 @@
 
 </body>
 </html>
+
 
 
 
